Expand helm-projectile macro

--- a/README.org
+++ b/README.org
@@ -11,7 +11,7 @@ which provides as you type completion.
   - ~helm-lsp-workspace-symbol~ - workspace symbols for the current workspace
   - ~helm-lsp-global-workspace-symbol~ - workspace symbols from all of the active workspaces.
   - ~helm-lsp-code-actions~ - helm interface to lsp-execute-code-action.
-  - ~helm-projectile-switch-lsp-project~ - switch ~lsp-mode~ project (when ~helm-projectile~ is present)
+  - ~helm-lsp-switch-project~ - switch ~lsp-mode~ project (when ~helm-projectile~ is present)
 * Configuration
   Use the following lines to replace ~xref-find-apropos~ in ~lsp-mode~ controlled buffer.s
   #+BEGIN_SRC emacs-lisp
